# vaultpub

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  hatch_build.py  pyproject.toml
dev/: 2026060301-initial-implementation.md  2026060302-frontend-realtime-docs.md  2026060303-review-fix-guidance.md  2026060304-review-fixes.md  2026060305-django-template-engine.md  2026060305-review-verification-fixes.md  20260603init.plan.dev.md  20260603init.plan.md  2026060401-static-asset-routing.md  2026060401-theme-system.md  2026060402-sidebar-layout-state.md  2026060403-nav-wrap-gitignore.md  2026060404-frontend-build-release-flow.md  2026060405-nav-root-hidden.md  2026060406-local-graph-sidebar.md  2026060407-regex-public-excludes-plan.md  2026060408-scroll-blank-fix.md  2026060409-folder-nav-directory-pages.md  2026060409-topbar-context.md  2026060410-clickable-breadcrumbs.md  2026060410-directory-card-file-labels.md  2026060411-directory-list-layout.md  2026060412-directory-sidebar-siblings.md  2026060501-right-sidebar-responsive-breakpoint.md  2026060502-unified-local-resource-resolution.md  2026060503-download-binary-attachments.md  2026060504-realtime-shutdown-latency.md  2026060505-serve-sse-shutdown.md  2026060506-sidebar-nav-controls.md  2026060507-nav-heading-codeblock-fix.md  2026060508-sidebar-resize.md  2026060509-markdown-heading-anchor-fix.md  2026060901-django-dynamic-multivault.md  2026061201-obsidian-media-path-resolution.md  2026061202-obsidian-linked-file-embeds.md  2026061203-wide-content-code-wrap.md  2026061204-markdown-codeblock-wrap-line-numbers.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: build.mjs
frontend/src/: app.ts  code-highlight.ts  graph.ts  math-init.ts  mermaid-init.ts  mobile.ts  nav-highlight.ts  preview.ts  realtime.ts  scroller.ts  search.ts  sidebar.ts  stacked-pages.ts  theme.ts  topbar-context.ts  urls.ts
frontend/src/styles/: base.css  callouts.css  highlight.css  layout.css  obsidian-vars.css  themes.css
help/: guide.md
src/vaultpub/: __init__.py
src/vaultpub/cli/: main.py
src/vaultpub/core/: attachments.py  config.py  exceptions.py  frontmatter.py  models.py  paths.py  scanner.py  security.py
src/vaultpub/core/export/: __init__.py  static_builder.py
src/vaultpub/core/index/: __init__.py  indexer.py
src/vaultpub/core/parser/: callouts.py  comments.py  embeds.py  markdown.py  math.py  mermaid.py  obsidian_links.py
src/vaultpub/core/realtime/: __init__.py  broadcaster.py  events.py  watcher.py
src/vaultpub/core/render/: __init__.py  renderer.py  sanitize.py  seo.py  templates.py
src/vaultpub/django_app/: apps.py  conf.py  consumers.py  middleware.py  urls.py  views.py
src/vaultpub/django_app/static/vaultpub/: app.css  app.js
src/vaultpub/django_app/template_tags/: vaultpub_tags.py
src/vaultpub/django_app/templates/vaultpub/: base.html  page.html
src/vaultpub/django_app/templates/vaultpub/partials/: backlinks.html  graph.html  nav.html  search.html  toc.html
src/vaultpub/export/: __init__.py
src/vaultpub/web/: __init__.py  app.py  routes.py  sse.py  websocket.py
tests/: conftest.py
tests/django/: test_django_app.py
tests/fixtures/vault_basic/: A.md  README.md
tests/fixtures/vault_basic/Folder/: B.md
tests/fixtures/vault_links/: Alias Target.md  Note.md  README.md
tests/fixtures/vault_local_resources/: README.md
tests/fixtures/vault_local_resources/subdir/: Other.md  README.md  tool.py
tests/fixtures/vault_obsidian_syntax/: Blocks.md  Callouts.md  Embeds.md  Math.md  Mermaid.md  Other Note.md  Tags.md
tests/fixtures/vault_publish_filters/: Draft.md  Forced.md  Public.md  README.md
tests/fixtures/vault_security/: README.md  unsafe.md
tests/fixtures/vault_security/.obsidian/: workspace.json
tests/fixtures/vault_security/private/: Secret.md
tests/integration/: test_static_builder.py  test_web_app.py
tests/unit/: test_callouts.py  test_config.py  test_embeds.py  test_frontmatter.py  test_indexer.py  test_markdown.py  test_obsidian_links.py  test_paths.py  test_realtime_watcher.py  test_regex_rules.py  test_renderer.py  test_sanitize.py  test_scanner.py  test_security.py  test_seo.py  test_sse_broadcaster.py
