[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultpub"
version = "0.1.0"
description = "Publish a local Obsidian vault as a browsable, searchable web site"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "vaultpub contributors"}]
keywords = ["obsidian", "markdown", "publish", "static-site", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
]

dependencies = [
    "typer>=0.12",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "python-frontmatter>=1.1",
    "watchfiles>=0.21",
    "starlette>=0.38",
    "jinja2>=3.1",
    "bleach>=6.1",
    "pyyaml>=6.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
django = ["django>=4.2"]
channels = ["channels>=4.1", "daphne>=4.1"]
all = [
    "vaultpub[django,channels,dev]",
]

[project.scripts]
vaultpub = "vaultpub.cli.main:app"

[project.urls]
Homepage = "https://github.com/vaultpub/vaultpub"
Repository = "https://github.com/vaultpub/vaultpub"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultpub"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/vaultpub"]
